# linkurious

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
linkurious/: __init__.py
tests/: test_linkurious.py
