[tool.poetry]
name = "linkurious"
version = "0.1.2"
description = "Python wrapper around linkurious API"
authors = ["guglielmo <guglielmo@openpolis.it>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/openpolis/linkurious/"

[tool.poetry.dependencies]
python = "^3.8"
tortilla = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
